Fix Chrome 121 scrollbar

--- a/packages/radix-ui-themes/src/components/text-area.css
+++ b/packages/radix-ui-themes/src/components/text-area.css
@@ -45,7 +45,6 @@
   & {
     /* Arrow mouse cursor over the scrollbar */
     cursor: auto;
-    scrollbar-width: thin;
   }
   &::-webkit-scrollbar {
     width: var(--space-3);
